# uniband-monitor

./: Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  description-pak
src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  card_handler.c  engine.c  engine.h  main.c  main.h  read_options.c  set_devices.sh  signaldetails.c  suid.c  threads.c  uniband-monitor.conf  uniband_monitor.sh  uniband_monitor.ui
